--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -1,5 +1,5 @@
 @import "../../../modules/Core/less/yawik.less";
-@brand-primary: #0018a8;
+@brand-primary: #476c9b;
 @g24-grey: #242424;
 @g24-white: #ffffff;
 @fa-font-path: '/dist/fonts';
