--- a/view/layout.phtml
+++ b/view/layout.phtml
@@ -54,6 +54,8 @@ $this->configHeadScript()->appendScript('var lang="' . $this->params('lang') . '
     <?php echo $this->configHeadScript() ?>
     <?php echo $this->headLink() ?>
     <?php echo $this->headStyle() ?>
+    
+    <link type="text/css" href="/modules/JobsFrankfurt/fit.css" rel="stylesheet" media="screen">
 
     <style>
      @media (max-width: 768px){
