--- a/public/fit.css
+++ b/public/fit.css
@@ -274,8 +274,8 @@
 }
 
 #form-jobsbymail-subscribe-form button.btn-info {
-    background-color: #add9f4 !important; 
-    border-color: #add9f4 !important;
+    background-color: #984447 !important; 
+    border-color: #984447 !important;
     color: #fff;
 }
 
