--- a/view/layout.phtml
+++ b/view/layout.phtml
@@ -167,7 +167,7 @@ $this->configHeadScript()->appendScript('var lang="' . $this->params('lang') . '
                     <span class="icon-bar"></span>
                   </button>
                     <a class="navbar-brand menu-logo headliner" href="/de">
-                        GESUNDHEITSSTELLENMARKT.de
+                       <h1> GESUNDHEITSSTELLENMARKT.de </h1>
                     </a>
                  </div>
             <nav id="main-navigation" class="navbar-collapse collapse navbar-collapse" role="navigation">
