sets z-index for coockie notice

--- a/view/layout.phtml
+++ b/view/layout.phtml
@@ -104,7 +104,7 @@ $this->configHeadScript()->appendScript('var lang="' . $this->params('lang') . '
 <script>
   new cookieNoticeJS({
     // Position for the cookie-notifier (default=bottom)
-    'cookieNoticePosition': 'top',
+    'cookieNoticePosition': 'bottom',
 
     // Shows the "learn more button (default=false)
     'learnMoreLinkEnabled': false,
