--- a/view/footer.phtml
+++ b/view/footer.phtml
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-6 col-md-2">
-                <h5>Über Jobs-Frankfurt.com</h5>
+                <h5>Über Gesundheitsstellenmarkt.de</h5>
                 <nav>
                     <ul class="list-unstyled">
                         <li><a title="" href="/de/wp/page/ueber-uns">Über uns</a></li>
@@ -26,7 +26,7 @@
                 <h5>Social Media</h5>
                 <nav>
                     <ul class="list-unstyled">
-                        <li><a title="Stelllenmarkt bei Facebook" href="https://www.facebook.com/stellenmarkt.de/" target="_blank">Facebook</a></li>
+                        <li><a title="Stellenmarkt bei Facebook" href="https://www.facebook.com/stellenmarkt.de/" target="_blank">Facebook</a></li>
                     </ul>
                 </nav>
             </div>
@@ -56,7 +56,7 @@
                         <li><a title="AGB" href="/de/wp/page/agb">AGB</a></li>
                     </ul>
                 </nav>
-                <p>Copyright &copy; Jobs-Frankfurt.com <?=date('Y')?></p>
+                <p>Copyright &copy; Gesundheitsstellenmarkt.de <?=date('Y')?></p>
             </div>
         </div>
 </footer>
