--- a/view/footer.phtml
+++ b/view/footer.phtml
@@ -12,7 +12,7 @@
 <footer id="footer">
     <div class="container">
         <div class="row">
-            <div class="col-xs-6 col-md-2">
+            <div class="col-xs-12 col-sm-4 col-md-4">
                 <h5>Über Gesundheitsstellenmarkt.de</h5>
                 <nav>
                     <ul class="list-unstyled">
@@ -22,7 +22,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="col-xs-6 col-md-2">
+            <div class="col-xs-12 col-sm-4 col-md-4">
                 <h5>Social Media</h5>
                 <nav>
                     <ul class="list-unstyled">
@@ -30,7 +30,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="col-xs-6 col-md-2">
+            <div class="col-xs-12 col-sm-4 col-md-4">
                 <h5>Für Arbeitgeber</h5>
                 <nav>
                     <ul class="list-unstyled">
