--- a/view/layout.phtml
+++ b/view/layout.phtml
@@ -51,6 +51,7 @@ $this->configHeadScript()->appendScript('var lang="' . $this->params('lang') . '
     <?php echo $this->configHeadScript() ?>
     <?php echo $this->headLink() ?>
     <?php echo $this->headStyle() ?>
+    <link href="https://fonts.googleapis.com/css?family=Overpass:200,300,400,600,700,800,900&display=swap" rel="stylesheet">
 </head>
 <body>
 <?php if (!$this->noHeader):?>
@@ -65,9 +66,12 @@ $this->configHeadScript()->appendScript('var lang="' . $this->params('lang') . '
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                    <a class="navbar-brand menu-logo headliner" href="/de">
-                       <h1> GESUNDHEITSSTELLENMARKT.de </h1>
-                    </a>
+                  <div class="logo"><img src="/modules/JobsFrankfurt/logo.png"></div>
+                  <div class="logotype">
+                        <a class="navbar-brand menu-logo headliner" href="https://www.gesundheitsstellenmarkt.de/de">
+                            	<h1><span>GESUNDHEITS</span>STELLENMARKT.de </h1>
+                        </a>
+                    </div>
                  </div>
             <nav id="main-navigation" class="navbar-collapse collapse navbar-collapse" role="navigation">
 
@@ -83,21 +87,17 @@ $this->configHeadScript()->appendScript('var lang="' . $this->params('lang') . '
                 ?>
 
             </nav>
+            <br clear="all">
             <!-- /main-navigation -->
         </div>
-              <br>
-              <br>
-              <br>
      </div>
         <div id="formular">
         </div>
     </header>
     <?php endif ?>
-<main id="content" style="background-color:#f6f6f6;margin-bottom:0;padding-bottom:50px;min-height:65vh;padding-top:15px;position:relative;">
-<div class="container">
+<main id="content" style="background-color:#f6f6f6;margin-bottom:0;padding-bottom:50px;min-height:65vh; position:relative;">
         <?php echo $notifications?>
          <?php echo $this->content;?>
-</div>
 </main>
 
 <?php if (!$this->noFooter): echo $this->partial("footer"); endif; ?>
